--- a/packages/babel-lit-demo/index.html
+++ b/packages/babel-lit-demo/index.html
@@ -1,10 +1,10 @@
 <html lang="en">
   <head>
-    <title>swc-demo</title>
+    <title>babel-lit-demo</title>
   </head>
   <body>
-    <h1>swc Demo</h1>
-    <swc-demo></swc-demo>
+    <h1>babel Lit Demo</h1>
+    <babel-lit-demo></babel-lit-demo>
     <script type="module" src="bundle.js"></script>
   </body>
 </html>
