--- a/packages/esbuild-lit-demo/index.html
+++ b/packages/esbuild-lit-demo/index.html
@@ -3,8 +3,8 @@
     <title>esbuild-demo</title>
   </head>
   <body>
-    <h1>esbuild Demo</h1>
-    <esbuild-demo></esbuild-demo>
+    <h1>esbuild Lit Demo</h1>
+    <esbuild-lit-demo></esbuild-lit-demo>
     <script type="module" src="bundle.js"></script>
   </body>
 </html>
