--- a/packages/tsc-lit-demo/index.html
+++ b/packages/tsc-lit-demo/index.html
@@ -1,10 +1,10 @@
 <html lang="en">
   <head>
-    <title>tsc-demo</title>
+    <title>tsc-lit-demo</title>
   </head>
   <body>
-    <h1>tsc Demo</h1>
-    <tsc-demo></tsc-demo>
+    <h1>tsc Lit Demo</h1>
+    <tsc-lit-demo></tsc-lit-demo>
     <script type="module" src="bundle.js"></script>
   </body>
 </html>
