--- a/packages/swc-lit-demo/index.html
+++ b/packages/swc-lit-demo/index.html
@@ -1,10 +1,10 @@
 <html lang="en">
   <head>
-    <title>babel-demo</title>
+    <title>swc-lit-demo</title>
   </head>
   <body>
-    <h1>babel Demo</h1>
-    <babel-demo></babel-demo>
+    <h1>swc Lit Demo</h1>
+    <swc-lit-demo></swc-lit-demo>
     <script type="module" src="bundle.js"></script>
   </body>
 </html>
