feat: Reuse multiple input files

--- a/packages/swc-lit-demo/index.html
+++ b/packages/swc-lit-demo/index.html
@@ -4,7 +4,7 @@
   </head>
   <body>
     <h1>swc Lit Demo</h1>
-    <swc-lit-demo></swc-lit-demo>
-    <script type="module" src="bundle.js"></script>
+    <lit-demo></lit-demo>
+    <script type="module" src="lib/bundle.js"></script>
   </body>
 </html>
