--- a/packages/tsc-polymer-demo/index.html
+++ b/packages/tsc-polymer-demo/index.html
@@ -4,7 +4,7 @@
   </head>
   <body>
     <h1>tsc Polymer Demo</h1>
-    <tsc-polymer-demo></tsc-polymer-demo>
-    <script type="module" src="bundle.js"></script>
+    <polymer-demo></polymer-demo>
+    <script type="module" src="lib/bundle.js"></script>
   </body>
 </html>
