--- a/packages/babel-lit-demo/index.html
+++ b/packages/babel-lit-demo/index.html
@@ -4,7 +4,7 @@
   </head>
   <body>
     <h1>babel Lit Demo</h1>
-    <babel-lit-demo></babel-lit-demo>
-    <script type="module" src="bundle.js"></script>
+    <lit-demo></lit-demo>
+    <script type="module" src="lib/bundle.js"></script>
   </body>
 </html>
