--- a/packages/tsc-lit-demo/index.html
+++ b/packages/tsc-lit-demo/index.html
@@ -4,7 +4,7 @@
   </head>
   <body>
     <h1>tsc Lit Demo</h1>
-    <tsc-lit-demo></tsc-lit-demo>
-    <script type="module" src="bundle.js"></script>
+    <lit-demo></lit-demo>
+    <script type="module" src="lib/bundle.js"></script>
   </body>
 </html>
