feat(babel-lit-demo): multiple input files

--- a/packages/babel-lit-demo/index.html
+++ b/packages/babel-lit-demo/index.html
@@ -5,6 +5,6 @@
   <body>
     <h1>babel Lit Demo</h1>
     <babel-lit-demo></babel-lit-demo>
-    <script type="module" src="bundle.js"></script>
+    <script type="module" src="lib/bundle.js"></script>
   </body>
 </html>
