fix(swc-lit-demo): Use lit-demo with property decorators using latest swc

--- a/packages/swc-lit-demo/index.html
+++ b/packages/swc-lit-demo/index.html
@@ -4,7 +4,7 @@
   </head>
   <body>
     <h1>swc Lit Demo</h1>
-    <lit-demo-without-property-decorators></lit-demo-without-property-decorators>
+    <lit-demo></lit-demo>
     <script type="module" src="lib/bundle.js"></script>
   </body>
 </html>
